// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Example Component should change files appropriately 1`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
import { NgModule } from '@angular/core';
import { DtTestComponentModule } from '@dynatrace/barista-components/test-component';
import { DtExampleSimpleTestComponent } from './test-component-simple-example/test-component-simple-example';
import { DtExampleComplexTestComponent } from './test-component-complex-example/test-component-complex-example';
export const DT_TEST_COMPONENT_EXAMPLES = [DtExampleSimpleTestComponent];

@NgModule({
  imports: [DtTestComponentModule],
  declarations: [...DT_TEST_COMPONENT_EXAMPLES, DtExampleComplexTestComponent],
})
export class DtExamplesTestComponentModule {}
"
`;

exports[`Add Example Component should change files appropriately 2`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

export * from './test-component-examples.module';
export * from './test-component-simple-example/test-component-simple-example';
export * from './test-component-complex-example/test-component-complex-example';
"
`;

exports[`Add Example Component should change files appropriately 3`] = `
"import { Type } from '@angular/core';

import { DtExampleAlertDarkError } from './alert/alert-dark-error-example/alert-dark-error-example';
import { DtExampleAlertDark } from './alert/alert-dark-example/alert-dark-example';
import { DtExampleAlertError } from './alert/alert-error-example/alert-error-example';
import { DtExampleComplexTestComponent } from '././test-component/test-component-complex-example/test-component-complex-example';
export { DtExamplesModule } from './examples.module';
export { DtExamplesTreeTableModule } from './tree-table/tree-table-examples.module';
export {
  DtExampleAlertDarkError,
  DtExampleAlertDark,
  DtExampleTreeTableSimple,
  DtExampleComplexTestComponent,
};

export const EXAMPLES_MAP = new Map<string, Type<unknown>>([
  ['DtExampleAlertDarkError', DtExampleAlertDarkError],
  ['DtExampleAlertDark', DtExampleAlertDark],
  ['DtExampleComplexTestComponent', DtExampleComplexTestComponent],
]);
"
`;

exports[`Add Example Component should change files appropriately 4`] = `""`;

exports[`Add Example Component should change files appropriately 5`] = `
"import { NgModule } from '@angular/core';
import { RouterModule, Routes } from '@angular/router';

import {
  DtExampleTreeTableProblemIndicator,
  DtExampleTreeTableSimple,
  DtExampleComplexTestComponent,
} from '@dynatrace/examples';

const ROUTES: Routes = [
  { path: 'alert-dark-error-example', component: DtExampleAlertDarkError },
  { path: 'tree-table-default-example', component: DtExampleTreeTableDefault },
  {
    path: 'tree-table-problem-indicator-example',
    component: DtExampleTreeTableProblemIndicator,
  },
  { path: 'tree-table-simple-example', component: DtExampleTreeTableSimple },
  {
    path: 'test-component-complex-example',
    component: DtExampleComplexTestComponent,
  },
];

@NgModule({
  imports: [RouterModule.forRoot(ROUTES)],
  exports: [RouterModule],
})
export class DtDemosAppRoutingModule {}
"
`;

exports[`Add Example Component should change files appropriately 6`] = `
"export const DT_DEMOS_EXAMPLE_NAV_ITEMS = [
  {
    name: 'alert',
    examples: [
      {
        name: 'alert-dark-error-example',
        route: '/alert-dark-error-example',
      },
    ],
  },
  {
    name: 'test-component',
    examples: [
      {
        name: 'autocomplete-attach-different-element-example',
        route: '/autocomplete-attach-different-element-example',
      },
      {
        name: 'test-component-complex-example',
        route: '/test-component-complex-example',
      },
    ],
  },
];
"
`;

exports[`Add Example Component should generate files with the appropriate content 1`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

export * from './test-component-examples.module';
export * from './test-component-simple-example/test-component-simple-example';
"
`;

exports[`Add Example Component should generate files with the appropriate content 2`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
import { NgModule } from '@angular/core';
import { DtTestComponentModule } from '@dynatrace/barista-components/test-component';
import { DtExampleSimpleTestComponent } from './test-component-simple-example/test-component-simple-example';

@NgModule({
  imports: [DtTestComponentModule],
  declarations: [DtExampleSimpleTestComponent],
})
export class DtExamplesTestComponentModule {}
"
`;

exports[`Add Example Component should generate files with the appropriate content 3`] = `
"<dt-test-component></dt-test-component>
"
`;

exports[`Add Example Component should generate files with the appropriate content 4`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import { Component } from '@angular/core';

@Component({
  selector: 'dt-example-simple-test-component',
  templateUrl: './test-component-simple-example.html',
})
export class DtExampleSimpleTestComponent {}
"
`;

exports[`Add Example Component should provide meaningful error message if barrel index.ts modification is not successful 1`] = `"There was a problem modifying 'libs/examples/src/index.ts: Cannot read property 'end' of undefined"`;

exports[`Add Example Component should provide meaningful error message if component app-routing.module.ts modification is not successful 1`] = `"There was a problem modifying 'app-routing.module.ts': Cannot read property 'importClause' of undefined"`;

exports[`Add Example Component should provide meaningful error message if component index.ts modification is not successful 1`] = `"There was a problem updating 'libs/examples/src/test-component/index.ts' : Cannot read property 'end' of undefined"`;

exports[`Add Example Component should provide meaningful error message if component nav-items.ts modification is not successful 1`] = `"There was a problem updating 'apps/demos/src/nav-items.ts' : Cannot read property 'initializer' of undefined"`;

exports[`Add Example Component should throw error if there was a problem updating examples.module file 1`] = `"A merge conflicted on path \\"/libs/examples/src/test/test-test-example/test-test-example.ts\\"."`;
